Fixed Header Visibilitiy

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,10 +12,12 @@ body {
     color: #333;
     line-height: 1.6;
 }
-
+header h1 {
+    color: white; 
+}
 header, footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #333; 
+    color: #ffffff; 
     padding: 10px 20px;
 }
 
